add validation error message for better ux
