# controller/authController.go
@@ -2,13 +2,12 @@ package controller
 
 import (
 	"database/sql"
+	"net/http"
 	"github.com/gin-gonic/gin"
 	"github.com/nhatflash/fbchain/api"
-	appError "github.com/nhatflash/fbchain/error"
 	"github.com/nhatflash/fbchain/client"
-	"github.com/nhatflash/fbchain/service"
-	"net/http"
 	_ "github.com/nhatflash/fbchain/docs"
+	"github.com/nhatflash/fbchain/service"
 )
 
 type AuthController struct {
@@ -20,12 +19,12 @@ type AuthController struct {
 // @Produce json
 // @Param request body client.SignInRequest true "SignIn" body
 // @Success 200 {object} client.SignInResponse
-// @Failure 400 {object} appError.ErrorResponse
+// @Failure 400 {object} error
 // @Router /auth/login [post]
 func (authController AuthController) SignIn(c *gin.Context) {
 	var signInRequest client.SignInRequest
 	if reqErr := c.ShouldBindJSON(&signInRequest); reqErr != nil {
-		c.Error(appError.BadRequestError("Validation failed on fields: " + reqErr.Error()))
+		c.Error(reqErr)
 		return
 	}
 	signInResponse, logErr := service.HandleSignIn(&signInRequest, authController.Db, c)
@@ -42,13 +41,13 @@ func (authController AuthController) SignIn(c *gin.Context) {
 // @Produce json
 // @Param request body client.InitialTenantRegisterRequest true "InitialTenantRegister body"
 // @Success 201 {object} client.UserResponse
-// @Failure 400 {object} appError.ErrorResponse
+// @Failure 400 {object} error
 // @Router /auth/register/tenant/initial [post]
 func (authController AuthController) InitialTenantRegister(c *gin.Context) {
 	var registerTenantRequest client.InitialTenantRegisterRequest
 
 	if reqErr := c.ShouldBindJSON(&registerTenantRequest); reqErr != nil {
-		c.Error(appError.BadRequestError("Validation failed on fields: " + reqErr.Error()))
+		c.Error(reqErr)
 		return
 	}
 
